--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                 } catch (error) {
                     console.error('Error loading song index:', error);
                     showError('Error al cargar el índice', 
-                              'No se pudo cargar el archivo canciones/_index.json', 
+                              'No se pudo cargar el archivo canciones/index.json', 
                               error.message);
                     hideLoader();
                 }
